# affiliate-platform

./: README.md  todo.md
affiliate-reconciliation-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  brief.txt  docker-compose.yml  pyproject.toml
affiliate-reconciliation-backend/app/: __init__.py  config.py  database.py  main.py
affiliate-reconciliation-backend/app/api/: deps.py
affiliate-reconciliation-backend/app/integrations/: __init__.py  base.py  instagram.py  platforms.py  reddit.py  tiktok.py  x.py  youtube.py
affiliate-reconciliation-backend/app/jobs/: queue.py  reconciliation_job.py  redis_queue.py  worker_reconciliation.py
affiliate-reconciliation-backend/app/services/: alerting.py  data_quality_validators.py  discord_bot.py  discrepancy_classifier.py  platform_fetch.py  platform_fetcher.py  trust_scoring.py  (+1 more)
affiliate-reconciliation-backend/docs/: ALERTING_AND_TRUST.md  API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  CONFIGURATION.md  DATA_FLOW_EXAMPLES.md  DATA_MODEL.md  INTEGRATIONS.md  OPERATIONS_AND_OBSERVABILITY.md  QUEUE_AND_WORKER.md  RECONCILIATION_ENGINE.md  ROADMAP.md  SETUP_GUIDE.md  TESTING_STRATEGY.md
affiliate-reconciliation-backend/tests/: conftest.py  test_analytics_campaign.py  test_bot_token_auth.py  test_e2e_flow.py  test_edge_cases.py  test_full_system.py  test_integration_reconciliation.py  test_rate_limiting.py  test_rbac_and_uniqueness.py  test_redis_queue.py  test_unit_backoff.py  test_unit_circuit_breaker.py  test_unit_discrepancy_classifier.py  test_unit_priority_queue.py  test_unit_trust_scoring.py
(+42 files in other folders)
