[project]
name = "affiliate-reconciliation-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "P4R1H",email = "damps.home@gmail.com"}
]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
