[tool.poetry]
name = "affiliate-reconciliation-backend"
version = "0.1.0"
description = "Affiliate reconciliation platform backend"
authors = ["P4R1H <damps.home@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
sqlalchemy = ">=2.0.43,<3.0.0"
pydantic = {version = ">=2.11.7,<3.0.0", extras=["email"]}
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
requests = ">=2.32.5,<3.0.0"
aiohttp = ">=3.12.15,<4.0.0"
"discord-py" = ">=2.4.0,<3.0.0"
redis = ">=5.0.0,<6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"
faker = "^37.6.0"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

